# rust_g431

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: cli.rs  main.rs
src/app/: mod.rs  state.rs
src/app/cli/: commands.rs  handlers.rs  mod.rs  writer.rs
src/app/tasks/: cli_task.rs  mod.rs
src/bsp/: clock.rs  mod.rs  peripherals.rs  pin_map.rs
src/common/: math.rs  mod.rs  types.rs  units.rs
src/driver/: mod.rs  serial.rs
src/middleware/: mod.rs  pid.rs
src/middleware/foc/: clarke.rs  mod.rs  park.rs  svpwm.rs
