[package]
name = "stm32g431-foc"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.5.0", features = ["stm32g431cb", "defmt", "time-driver-tim2"] }
embassy-time = "0.5"
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
# embedded-cli 依赖 embedded_io 0.6，用 package 别名引入旧版本
embedded-io-v06 = { package = "embedded-io", version = "0.6" }
embedded-cli = "0.2"
ufmt = "0.2"
heapless = "0.8"
static_cell = "2.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
